--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -29,10 +29,12 @@
     </div>
 
     <!-- scripts and styles -->
+    {% style "https://cdnjs.cloudflare.com/ajax/libs/antd/3.9.3/antd.min.css" %}
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
     {% style "/assets/font-awesome/css/all.css" %}
     {% style "/css/screen.css" %}
 
+    <!-- {% script "https://cdnjs.cloudflare.com/ajax/libs/antd/3.9.3/antd.min.js" %} -->
     {% script "/assets/jquery/jquery.min.js" %}
     {% script "/assets/font-awesome/js/all.js" %}
     {% script "/assets/tether/dist/js/tether.min.js" %}
